--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
 
     <canvas id="canvas" width="10000" height="720"></canvas> 
     <div id="background"></div>
+    <div id="PositionDisplay"></div>
+    <br>
+    <div id="DisplayCanvasPosition"></div>
     <!-- change the size attributes of your canvas according to your game -->
     <!-- further HTML elements, that should overlay your game. e.g. Main Screen, Game Over screen, .... -->
     <!-- <div id="gameOverScreen"></div> -->
