--- a/index.html
+++ b/index.html
@@ -14,14 +14,18 @@
   <div id="gameContainer">
     <!-- further HTML elements, that should be behind your game. e.g. Background image, .... -->
 
-    <canvas id="canvas" width="10000" height="720"></canvas> 
+    <canvas id="canvas" width="1280" height="720"></canvas> 
     <div id="background"></div>
     <div id="PositionDisplay"></div>
     <br>
     <div id="DisplayCanvasPosition"></div>
     <!-- change the size attributes of your canvas according to your game -->
     <!-- further HTML elements, that should overlay your game. e.g. Main Screen, Game Over screen, .... -->
-    <!-- <div id="gameOverScreen"></div> -->
+    <div id="gameOverScreen">
+      <h1>Game Over</h1>
+      <button id="restartButton">Restart</button>
+      <button id="home">Home</button>
+    </div>
     <!-- <div id="mainScreen"></div> -->
   </div>
   <!-- further HTML elements, that should maybe be displayed below your game. E.g. Score, .... -->
