--- a/Game/index.html
+++ b/Game/index.html
@@ -12,11 +12,11 @@
 
 <body>
 
-  <div id="cutscene" style="display: none;">
-    <video id="cutsceneVideo" width="1280" height="720" autoplay>
-      <source src="cutScene/CutScene1.mp4" type="video/mp4">
-      Your browser does not support the video tag.
+  <div id="cutscene" style="display:none;">
+    <video id="cutsceneVideo" width="1280" height="720" autoplay style="display:none;"></video>
+      <source type="video/mp4">
     </video>
+    <button id="skipCutscene">Skip</button>
   </div>
 
   <div id="gameContainer">
