--- a/Game/index.html
+++ b/Game/index.html
@@ -12,8 +12,8 @@
 
 <body>
 
-  <div id="cutscene" style="display:none;">
-    <video id="cutsceneVideo" width="1280" height="720" autoplay style="display:none;"></video>
+  <div id="cutscene" >
+    <video id="cutsceneVideo" width="1280" height="720" autoplay></video>
       <source type="video/mp4">
     </video>
     <button id="skipCutscene">Skip</button>
@@ -23,8 +23,6 @@
     <canvas id="canvas" width="1280" height="720"></canvas>
     <div id="background"></div>
     <div id="PositionDisplay"></div>
-    <br>
-    <div id="DisplayCanvasPosition"></div>
     <div id="gameOverScreen">
       <img id="gameOverImage">
       <button id="restartButton">Try again</button>
