--- a/Game/index.html
+++ b/Game/index.html
@@ -23,10 +23,16 @@
     <canvas id="canvas" width="1280" height="720"></canvas>
     <div id="background"></div>
     <div id="PositionDisplay"></div>
+    
     <div id="gameOverScreen">
       <img id="gameOverImage">
       <button id="restartButton">Try again</button>
       <button id="home">Home</button>
+    </div>
+    <div id="levelCompleteScreen">
+      <img id="levelCompleteImage">
+      <button id="nextLevelBtn">Next Level</button>
+      <button id="home1">Home</button>
     </div>
 
   </div>
