--- a/index.html
+++ b/index.html
@@ -13,6 +13,16 @@
   <div id="background"></div>
   <div id="mainMenu" class="menu">
     <button id="startBtn">Start Game</button>
+    <button id="guideBtn">How to Play</button>
+  </div>
+
+  <div id="gameGuide">
+    <h1>How to play</h1>
+    <p>Use A, D, Space to move the player.</p>
+    <p>Collect items to unlock abilities to complete the levels.</p>
+    <P>Left-click to use your gun ability</P>
+    <p>Be careful of the monsters, mines, spikes and laser guns</p>
+    <button id="backBtn" onclick="goBackToMainMenu()">back</button>
   </div>
 
   <div id="levelSelectMenu">
