--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   </div>
 
   <audio autoplay hidden loop>
-    <source src="./CutScenes/beerRun.mp3" type="audio/mp3">
+    <source src="./assets/beerRun.mp3" type="audio/mp3">
   </audio>
 
   <script type="module" src="./script.js"></script>
